Fix issue with overlapping comments

--- a/addons/fix-editor-comments/scroll.css
+++ b/addons/fix-editor-comments/scroll.css
@@ -3,4 +3,5 @@
  */
 .scratchCommentTextarea {
   overflow-y: auto;
+  background-color: transparent;
 }
